--- a/wp-content/themes/rowling/style.css
+++ b/wp-content/themes/rowling/style.css
@@ -4601,10 +4601,14 @@ a.btn-dang-ky {
     }
 
     span.btn-explain-menu {
-        float: right;
-        font-size: 1.5em;
-        line-height: 2em;
-        margin-right: 0.5em;
+        position: absolute;
+		font-size: 1.5em;
+		line-height: 2em;
+		padding-right: 0.5em;
+		right: 0;
+		padding-left: calc(100% - 1em);
+		left: 0;
+		width: 100%;
     }
 
     li.menu-item-has-children ul.sub-menu {
